# Postflight-AI

./: .gitignore  DEMO.md  Dockerfile  README.md  action.yml  pyproject.toml
.github/workflows/: release.yml  test.yml  tests.yml
ascent/: alignment.py  cli.py  goals.py  llm.py  recommend.py  scoring.py  verdict.py  wizard.py
ascent/drivers/: api.py  base.py  factory.py  mobile.py  web.py
ascent/evaluators/: base.py  journey.py  persona_agent.py  replay.py  stub.py
ascent/integrations/: github_api.py
ascent/output/: console.py  github.py
examples/: ascent.yaml
postlight/: cli.py  verdict.py
postlight/integrations/: github_api.py
postlight/output/: console.py
postlight/scanners/: base.py  gitleaks.py  osv.py  zap.py
tests/: test_alignment.py  test_api_driver.py  test_cli.py  test_drivers_llm.py  test_fix.py  test_github_output.py  test_goals.py  test_journey.py  test_persona_web.py  test_recommend.py  test_replay.py  test_scoring.py  test_verdict.py  test_wizard.py  test_zap.py
tests/fixtures/: analytics.json
tests/fixtures/vulnerable-demo/: README.md  private.key  requirements.txt
