[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ascent"
version = "0.2.0"
description = "Goal-based app QA: train your app to hit its KPIs and unlock the next milestone."
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
# The live-user evaluator stack. Optional so the core engine + CI run without it;
# the persona evaluator reports itself unavailable when these aren't installed.
live = ["anthropic>=0.40", "playwright>=1.40"]

[project.scripts]
ascent = "ascent.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["ascent"]
